--- a/index.html
+++ b/index.html
@@ -7,54 +7,72 @@
     <title>Kwiaty</title>
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Syne+Mono&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav class="nav">
+
+    <nav class="nav ">
         <a class="nav__link" href="#">asortyment</a>
         <a class="nav__link" href="#">dostawy</a>
         <a class="nav__link" href="#">opinie</a>
         <a class="nav__link" href="#">jak dojechać</a>
         <a class="nav__link nav__link--contact" href="#">kontakt</a>
-
-
     </nav>
+
     <header>
+        <div class="none"></div>
         <h1>Najpiękniejsze kwiaty w okolicy</h1>
+
     </header>
     <main>
         <p class="description">Najwspanialsze kwiaty w Polsce. Przyjedź, przekonaj się sam. Możliwość zakupu
             detalicznego i hurtowego. </p>
-
         <section class="features">
-            <p class="zaproszenie">
+            <p class="invitation">
                 Zapraszam do obejrzenia fotogalerii moich kwiatów</p>
-
-            <div class="feature">
-                <img class="image" src="chryz.jpg" alt="chryzantemy">
-                <h2>
-                    Chryzantemy złociste
-                </h2>
+            <div class="container1">
+                <div class="feature">
+                    <a href="#"><img class="image" src="chryz.jpg" alt="chryzantemy"> </a>
+                    <h2>
+                        Chryzantemy złociste
+                    </h2>
+                </div>
+                <div class="feature">
+                    <a href="#"><img class="image" src="bratki.jpg" alt="bratki"></a>
+                    <h2>
+                        Bratki
+                    </h2>
+                </div>
+                <div class="feature">
+                    <a href="#"> <img class="image" src="cactus.jpg" alt="cactus"></a>
+                    <h2>
+                        Kaktusy
+                    </h2>
+                </div>
             </div>
-            <div class="feature">
-                <img class="image" src="bratki.jpg" alt="bratki">
-
-
-                <h2>
-                    Bratki
-                </h2>
+            <div class="container2">
+                <div class="feature">
+                    <a href="#"><img class="image" src="aksam.jpg" alt="aksamitka"> </a>
+                    <h2>
+                        Aksamitki </h2>
+                </div>
+                <div class="feature">
+                    <a href="#"><img class="image" src="chaber.jpg" alt="chaber"></a>
+                    <h2>
+                        Chabry
+                    </h2>
+                </div>
+                <div class="feature">
+                    <a href="#"> <img class="image" src="dalie.jpg" alt="cactus"></a>
+                    <h2>
+                        Dalie
+                    </h2>
+                </div>
             </div>
-            <div class="feature">
-
-                <img class="image" src="cactus.jpg" alt="cactus">
-
-                <h2>
-                    Kaktusy
-                </h2>
             </div>
 
         </section>
