added bgr in nav bar and moved imgs into seprate folder

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-    <nav class="nav ">
+    <nav class="nav">
         <a class="nav__link" href="#">asortyment</a>
         <a class="nav__link" href="#">dostawy</a>
         <a class="nav__link" href="#">opinie</a>
@@ -36,19 +35,19 @@
                 Zapraszam do obejrzenia fotogalerii moich kwiatów</p>
             <div class="container1">
                 <div class="feature">
-                    <a href="#"><img class="image" src="chryz.jpg" alt="chryzantemy"> </a>
+                    <a href="#"><img class="image" src="./img/chryz.jpg" alt="chryzantemy"> </a>
                     <h2>
                         Chryzantemy złociste
                     </h2>
                 </div>
                 <div class="feature">
-                    <a href="#"><img class="image" src="bratki.jpg" alt="bratki"></a>
+                    <a href="#"><img class="image" src="./img/bratki.jpg" alt="bratki"></a>
                     <h2>
                         Bratki
                     </h2>
                 </div>
                 <div class="feature">
-                    <a href="#"> <img class="image" src="cactus.jpg" alt="cactus"></a>
+                    <a href="#"> <img class="image" src="./img/cactus.jpg" alt="cactus"></a>
                     <h2>
                         Kaktusy
                     </h2>
@@ -56,18 +55,18 @@
             </div>
             <div class="container2">
                 <div class="feature">
-                    <a href="#"><img class="image" src="aksam.jpg" alt="aksamitka"> </a>
+                    <a href="#"><img class="image" src="./img/aksam.jpg" alt="aksamitka"> </a>
                     <h2>
                         Aksamitki </h2>
                 </div>
                 <div class="feature">
-                    <a href="#"><img class="image" src="chaber.jpg" alt="chaber"></a>
+                    <a href="#"><img class="image" src="./img/chaber.jpg" alt="chaber"></a>
                     <h2>
                         Chabry
                     </h2>
                 </div>
                 <div class="feature">
-                    <a href="#"> <img class="image" src="dalie.jpg" alt="cactus"></a>
+                    <a href="#"> <img class="image" src="./img/dalie.jpg" alt="cactus"></a>
                     <h2>
                         Dalie
                     </h2>
@@ -78,6 +77,8 @@
         </section>
     </main>
     <footer>&copy; Ogrodnictwo Tom C.</footer>
+    
+    <script src="main.js"></script>
 </body>
 
 </html>
