--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwiaty</title>
+    <!-- maps -->
+       <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -76,6 +78,12 @@
 
         </section>
     </main>
+    <section>
+        <div class="map" id="map">
+            <div class="popup" id="popup"></div>
+        </div>
+        
+    </section>
     <footer>&copy; Ogrodnictwo Tom C.</footer>
     
     <script src="main.js"></script>
