added open maps and location

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Kwiaty</title>
     <!-- maps -->
        <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -79,8 +81,12 @@
         </section>
     </main>
     <section>
-        <div class="map" id="map">
-            <div class="popup" id="popup"></div>
+        <div class="map" id="mapOSM">
+         <div id="popup" class="ol-popup popup">
+            <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+            <div id="popup-content"></div>
+            </div>
+            <!-- <div class="popup" id="popup">Hello World</div> -->
         </div>
         
     </section>
