--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 
 <body>
     <nav class="nav">
-        <a class="nav__link" href="#">asortyment</a>
-        <a class="nav__link" href="#">dostawy</a>
-        <a class="nav__link" href="#">opinie</a>
-        <a class="nav__link" href="#">jak dojechać</a>
-        <a class="nav__link nav__link--contact" href="#">kontakt</a>
+        <a href="/" class="logo">KWIATY</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
+        <ul class="menu">
+            <li><a class="nav__link" href="#">asortyment</a></li>
+            <li><a class="nav__link" href="#">dostawy</a> </li>
+            <li><a class="nav__link" href="#">opinie</a></li>
+            <li><a class="nav__link" href="#">jak dojechać</a></li>
+            <li><a class="nav__link nav__link--contact" href="#">kontakt</a></li>
+        </ul>
     </nav>
 
     <header>
