--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwiaty</title>
     <!-- maps -->
-       <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
@@ -32,8 +33,8 @@
 
     </header>
     <main>
-        <p class="description">Najwspanialsze kwiaty w Polsce. Przyjedź, przekonaj się sam. Możliwość zakupu
-            detalicznego i hurtowego. </p>
+        <p class="description">Najwspanialsze kwiaty w Polsce. Przyjedź, przekonaj się sam.
+            <br> Możliwość zakupu detalicznego i hurtowego. </p>
         <section class="features">
             <p class="invitation">
                 Zapraszam do obejrzenia fotogalerii moich kwiatów</p>
@@ -82,16 +83,16 @@
     </main>
     <section>
         <div class="map" id="mapOSM">
-         <div id="popup" class="ol-popup popup">
-            <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-            <div id="popup-content"></div>
+            <div id="popup" class="ol-popup popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
             </div>
             <!-- <div class="popup" id="popup">Hello World</div> -->
         </div>
-        
+
     </section>
     <footer>&copy; Ogrodnictwo Tom C.</footer>
-    
+
     <script src="main.js"></script>
 </body>
 
