--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 <body>
     <nav class="nav">
-        <a class="nav__link" href="#">asortyment</a>
-        <a class="nav__link" href="#">dostawy</a>
+        <a class="nav__link" href="#">o mnie</a>
+        <a class="nav__link" href="#">moi klienci</a>
+        <a class="nav__link" href="#">oferta</a>
         <a class="nav__link" href="#">opinie</a>
         <a class="nav__link" href="#">jak dojechać</a>
         <a class="nav__link nav__link--contact" href="#">kontakt</a>
@@ -33,133 +34,54 @@
 
     </header>
     <main>
-        <p class="description">Najwspanialsze kwiaty w Polsce. Przyjedź, przekonaj się sam.
-            <br> Możliwość zakupu detalicznego i hurtowego. </p>
-        <section class="features">
-            <p class="invitation">
-                Zapraszam do obejrzenia fotogalerii moich kwiatów</p>
-            <div class="container page-top">
-                <div class="row" id="gallery" data-toggle=”modal” data-target=”#exampleModal”>
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4 img-thumbnail" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal" data-bs-whatever="@mdo">
-                        <a href="#" rel="ligthbox"><img src="./img/chryz.jpg" data-target=”#carouselExample”
-                                data-slide-to="0" class="w-100 zoom
-                                img-fluid" alt=" chryzantemy">
-                        </a>
-                        <h2>
-                            Chryzantemy złociste
-                        </h2>
-                    </div>
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4  img-thumbnail">
-                        <a href="#" class="fancybox" rel="ligthbox"><img src="./img/bratki.jpg"
-                                data-target=”#carouselExample” data-slide-to="2" class="w-100 zoom img-fluid "
-                                alt="bratki"></a>
-                        <h2>
-                            Bratki
-                        </h2>
-                    </div>
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4  img-thumbnail">
-                        <a href="#" class="fancybox" rel="ligthbox"> <img src="./img/cactus.jpg"
-                                data-target=”#carouselExample” data-slide-to="3" class="w-100 zoom img-fluid "
-                                alt="cactus"></a>
-                        <h2>
-                            Kaktusy
-                        </h2>
-                    </div>
+<section class="aboutMe">
+    <div class="aboutMeTextContainer">
+        <h2 class="aboutMeHeader">Na rynku od 1970 roku</h2>
+        <span class="aboutMeText">Jesteśmy zawsze skupieni na jednej rzeczy: zadowolenie klienta...
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores saepe ex in nisi possimus minima aliquam atque magni molestias facere maxime natus, perspiciatis tempore ea tenetur accusamus quisquam exercitationem?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus, alias, distinctio harum, ipsa nam officiis qui velit facilis excepturi facere. Pariatur earum vero sed unde nihil ratione accusantium eaque?
+        </span>
+    </div>
+    <img class="aboutMePhoto" src="/kwiaty/img/aboutMePhoto.jpg" alt="tom">
+</section>
+<section class="myClients">
+    <div class="myClientsLeft">
+        <div class="myClientsLeftUp">
+            <p class="myClientsLeftUpHeader">Moi klienci</p>
+        </div>
+        <div class="myClientsLeftDown">Możesz nas spotkać na rynkach w całym powiecie ;P </div>
+    </div>
+    <div class= "myClientsRight">
+        <h2>Współpracujemy z małymi i dużymi</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos quisquam, numquam in perferendis consequuntur provident facere sit iusto, amet eius omnis ducimus praesentium, vero totam corrupti animi reiciendis error dolorem?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus debitis harum doloremque porro blanditiis officiis qui, impedit cum ullam hic ipsum culpa eius soluta sequi aliquam magnam quia, in dicta!
+    </p>
+    </div>
+</section>
 
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4  img-thumbnail">
-                        <a href="#" class="fancybox" rel="ligthbox"><img src="./img/aksam.jpg"
-                                data-target=”#carouselExample” data-slide-to="4" class="w-100 zoom img-fluid "
-                                alt="aksamitka"> </a>
-                        <h2>
-                            Aksamitki </h2>
-                    </div>
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4  img-thumbnail">
-                        <a href="#" class="fancybox" rel="ligthbox"><img src="./img/chaber.jpg"
-                                data-target=”#carouselExample” data-slide-to="5" class="w-100 zoom img-fluid "
-                                alt="chaber"></a>
-                        <h2> Chabry
-                        </h2>
-                    </div>
-                    <div class="col-6 col-md-4 col-lg-3 mr-4 mb-4  img-thumbnail">
-                        <a href="#" class="fancybox" rel="ligthbox"> <img src="./img/dalie.jpg"
-                                data-target=”#carouselExample” data-slide-to="6" class="w-100 zoom img-fluid "
-                                alt="cactus"></a>
-                        <h2>
-                            Dalie
-                        </h2>
-                    </div>
-                </div>
-            </div>
-            </div>
+<section class="contactContainer">
+<div class="leftContactContainer">
+    <form>
+        <div class="nameEmail">
+            <label for="name" >
+                <input class="nameEmailItem" type="text" placeholder="Name" id="name"class= "email" required>
+            </label>
+            <label for="email">
+                <input class="nameEmailItem" type="email" placeholder="Email" id="email" required>
+            </label>
+        </div>
+        <div >
+            <label for="message">
+                <input class="messageSubmit" placeholder="Message..." required=" "></input>
+            </label>
+            <button id="submitBtn" type="submit" value="Submit">Wyślij</button>
+        </div>
 
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                data-bs-whatever="@mdo">Open modal for @mdo</button>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                data-bs-whatever="@fat">Open modal for @fat</button>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                data-bs-whatever="@getbootstrap">Open modal for @getbootstrap</button>
+    </form>
+</div>
+<div class="rightContactContainer">rfgdsrfg</div>
 
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item ">
-                                    <img src="./img/dalie.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="display-2" +>First slide label</h5>
-                                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./img/chaber.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="display-2">Second slide label</h5>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item active">
-                                    <img src="./img/cactus.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h1 class="display-2">Cactus</h1>
-                                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-            </div>
-            <div class="container h-50">
+</section>
 
-
-
-
-
-
-
-
-
-        </section>
     </main>
     <section>
         <div class="map" id="mapOSM">
