--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <section class="contactContainer">
 <div class="leftContactContainer">
     <form>
+        <p class="leftContactContainerHeader">Napisz jeśli masz jakies pytania</p>
         <div class="nameEmail">
             <label for="name" >
                 <input class="nameEmailItem" type="text" placeholder="Name" id="name"class= "email" required>
@@ -69,7 +70,7 @@
                 <input class="nameEmailItem" type="email" placeholder="Email" id="email" required>
             </label>
         </div>
-        <div >
+        <div class="messageSubmitBtn">
             <label for="message">
                 <input class="messageSubmit" placeholder="Message..." required=" "></input>
             </label>
