--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="nameEmail">
             <label for="name" >
                 <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
-                <div class="status"></div>
+                <!-- <div class="status"></div> -->
             </label>
             <label for="email">
                 <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
-                <div class="status"></div>
+                <!-- <div class="status"></div> -->
             </label>
         </div>
         <div class="messageSubmitBtn">
@@ -97,7 +97,7 @@
     </section>
 </main>
     <footer>
-        <div class="footerInformations">
+        <div class="footerInfos">
             <div class="footerPhone">Zadzwoń: 123 456 789</div>
             <div class="footerAdress">Iłowo-Osada 13-240, ul. Śmaka i Owaka 3/4</div>
         </div>
