not valid form added

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="nameEmail">
             <label for="name" >
                 <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
-                <!-- <div class="status"></div> -->
+                <div class="statusName">wpisz poprawne imię</div>
             </label>
             <label for="email">
                 <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
-                <!-- <div class="status"></div> -->
+                <div class="statusEmail">wpisz poprawny email</div>
             </label>
         </div>
         <div class="messageSubmitBtn">
