--- a/index.html
+++ b/index.html
@@ -61,28 +61,36 @@
 </section>
 
 <section class="contactContainer">
-<div class="leftContactContainer">
-    <form action="https://formspree.io/f/mwkwddel" method="POST" method="post">
-        <p class="leftContactContainerHeader">Napisz, jeśli masz jakies pytania</p>
-        <div class="nameEmail">
-            <label for="name" >
-                <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
-                <div class="statusName">wpisz poprawne imię</div>
-            </label>
-            <label for="email">
-                <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
-                <div class="statusEmail">wpisz poprawny email</div>
-            </label>
-        </div>
-        <div class="messageSubmitBtn">
-            <label for="message">
-                <textarea class="messageSubmit" placeholder="Message..." name="message" required></textarea>
-            </label>
-            <button class="submitBtn" type="submit" value="Submit">Wyślij</button>
-        </div>
-    </form>
-</div>
-<div class="rightContactContainer">rfgdsrfg</div>
+    <div class="leftContactContainer">
+        <form action="https://formspree.io/f/mwkwddel" method="POST" method="post">
+            <p class="leftContactContainerHeader">Napisz, jeśli masz jakies pytania</p>
+            <div class="nameEmail">
+                <label for="name" >
+                    <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
+                    <div class="statusName hidden">wpisz poprawne imię</div>
+                </label>
+                <label for="email">
+                    <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
+                    <div class="statusEmail hidden">wpisz poprawny email</div>
+                </label>
+            </div>
+            <div class="messageSubmitBtn">
+                <label for="message">
+                    <textarea class="messageSubmit" placeholder="Message..." name="message" required></textarea>
+                </label>
+                <button class="submitBtn" type="submit" value="Submit">Wyślij</button>
+            </div>
+        </form>
+    </div>
+    <div class="rightContactContainer"></div>
+</section>
+<section class="offerContainer">
+    <div class="offerPhoto"></div>
+    <div class="offerTextContainer">
+        <h1 class="offerHeader">Moja Oferta</h1>
+        <span class="offerText">Zapraszam do zapoznania się z moją ofertą. Kliknij tutaj aby zobaczyć asortyment i ceny</span>
+    </div>
+</section>
 
 </section>
     <section>
