--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,800;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
 
-
+    <link rel="stylesheet" href="root.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +24,7 @@
     <nav class="nav">
         <a class="nav__link" href="#">o mnie</a>
         <a class="nav__link" href="#">moi klienci</a>
-        <a class="nav__link" href="#">oferta</a>
+        <a class="nav__link" href="/oferta.html">oferta</a>
         <a class="nav__link" href="#">opinie</a>
         <a class="nav__link" href="#">jak dojechać</a>
         <a class="nav__link nav__link--contact" href="#">kontakt</a>
@@ -35,7 +35,7 @@
         <h1>Najpiękniejsze kwiaty w okolicy</h1>
 
     </header>
-    <main>
+<main>
 <section class="aboutMe">
     <div class="aboutMeTextContainer">
         <h2 class="aboutMeHeader">Na rynku od 1970 roku</h2>
