--- a/oferta.html
+++ b/oferta.html
@@ -34,23 +34,28 @@
                 <p class="flowerPrice">cena 10PLN</p>
             </div>
             <div class="flowerItemsContainer">
-                <div class="flowerItem"></div>
+                <img class="flowerImage" src="/img/chryz.jpg" alt="chryzantemy"/>
                 <p class="flowerName">chryzantemy</p>
                 <p class="flowerPrice">cena 15PLN</p>
             </div>
             <div class="flowerItemsContainer">
-                <div class="flowerItem"></div>
+                <img class="flowerImage" src="/img/dalie.jpg" alt="dalie"/>
                 <p class="flowerName">dalie</p>
                 <p class="flowerPrice">cena 20PLN</p>
             </div>
             <div class="flowerItemsContainer">
-                <div class="flowerItem"></div>
+                <img class="flowerImage" src="/img/aksamitki.jpg" alt="aksamitki"/>
                 <p class="flowerName">aksamitki</p>
                 <p class="flowerPrice">cena 10PLN</p>
             </div>
             <div class="flowerItemsContainer">
-                <div class="flowerItem"></div>
+                <img class="flowerImage" src="/img/cactus.jpg" alt="kaktusy"/>
                 <p class="flowerName">kaktusy</p>
+                <p class="flowerPrice">cena 30PLN</p>
+            </div>
+            <div class="flowerItemsContainer">
+                <img class="flowerImage" src="/img/astry.jpg" alt="astry"/>
+                <p class="flowerName">astry</p>
                 <p class="flowerPrice">cena 30PLN</p>
             </div>
         </section>
