--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Kwiaty</title>
     <!-- maps -->
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,800;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="root.css">
     <link rel="stylesheet" href="style.css">
@@ -33,95 +31,90 @@
     <header>
         <div class="none"></div>
         <h1>Najpiękniejsze kwiaty w okolicy</h1>
-
     </header>
-<main>
-<section class="aboutMe">
-    <div class="aboutMeTextContainer">
-        <h2 class="aboutMeHeader">Na rynku od 1970 roku</h2>
-        <span class="aboutMeText">Jesteśmy zawsze skupieni na jednej rzeczy: zadowolenie klienta...
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores saepe ex in nisi possimus minima aliquam atque magni molestias facere maxime natus, perspiciatis tempore ea tenetur accusamus quisquam exercitationem?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus, alias, distinctio harum, ipsa nam officiis qui velit facilis excepturi facere. Pariatur earum vero sed unde nihil ratione accusantium eaque?
-        </span>
-    </div>
-    <img class="aboutMePhoto" src="/img/aboutMePhoto.jpg" alt="tom">
-</section>
-<section class="myClients">
-    <div class="myClientsLeft">
-        <div class="myClientsLeftUp">
-            <p class="myClientsLeftUpHeader">Moi klienci</p>
-        </div>
-        <div class="myClientsLeftDown">Możesz nas spotkać na rynkach w całym powiecie ;P </div>
-    </div>
-    <div class= "myClientsRight">
-        <h2 class="myClientsRightHeader">Współpracujemy z małymi i dużymi</h2>
-    <p class="myClientsRightText">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos quisquam, numquam in perferendis consequuntur provident facere sit iusto, amet eius omnis ducimus praesentium, vero totam corrupti animi reiciendis error dolorem?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus debitis harum doloremque porro blanditiis officiis qui, impedit cum ullam hic ipsum culpa eius soluta sequi aliquam magnam quia, in dicta!
-    </p>
-    </div>
-</section>
-
-<section class="contactContainer">
-    <div class="leftContactContainer">
-        <form action="https://formspree.io/f/mwkwddel" method="POST" method="post">
-            <p class="leftContactContainerHeader">Napisz, jeśli masz jakies pytania</p>
-            <div class="nameEmail">
-                <label for="name" >
-                    <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
-                    <div class="statusName hidden">wpisz poprawne imię</div>
-                </label>
-                <label for="email">
-                    <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
-                    <div class="statusEmail hidden">wpisz poprawny email</div>
-                </label>
+    <main>
+        <section class="aboutMe">
+            <div class="aboutMeTextContainer">
+                <h2 class="aboutMeHeader">Na rynku od 1970 roku</h2>
+                <span class="aboutMeText">Jesteśmy zawsze skupieni na jednej rzeczy: zadowolenie klienta...
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores saepe ex in nisi possimus minima aliquam atque magni molestias facere maxime natus, perspiciatis tempore ea tenetur accusamus quisquam exercitationem?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus, alias, distinctio harum, ipsa nam officiis qui velit facilis excepturi facere. Pariatur earum vero sed unde nihil ratione accusantium eaque?
+                </span>
             </div>
-            <div class="messageSubmitBtn">
-                <label for="message">
-                    <textarea class="messageSubmit" placeholder="Message..." name="message" required></textarea>
-                </label>
-                <button class="submitBtn" type="submit" value="Submit">Wyślij</button>
+            <img class="aboutMePhoto" src="/img/aboutMePhoto.jpg" alt="tom">
+        </section>
+        <section class="myClients">
+            <div class="myClientsLeft">
+                <div class="myClientsLeftUp">
+                    <p class="myClientsLeftUpHeader">Moi klienci</p>
+                </div>
+                <div class="myClientsLeftDown">Możesz nas spotkać na rynkach w całym powiecie ;P </div>
             </div>
-        </form>
-    </div>
-    <div class="rightContactContainer"></div>
-</section>
-<section class="offerContainer">
-    <div class="offerPhoto"></div>
-    <div class="offerTextContainer">
-        <h1 class="offerHeader">Moja Oferta</h1>
-        <span class="offerText">Zapraszam do zapoznania się z moją ofertą. Kliknij tutaj aby zobaczyć asortyment i ceny</span>
-    </div>
-</section>
-
-</section>
-    <section>
-        <div class="map" id="mapOSM">
-            <div id="popup" class="ol-popup popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
+            <div class= "myClientsRight">
+                <h2 class="myClientsRightHeader">Współpracujemy z małymi i dużymi</h2>
+                <p class="myClientsRightText">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos quisquam, numquam in perferendis consequuntur provident facere sit iusto, amet eius omnis ducimus praesentium, vero totam corrupti animi reiciendis error dolorem?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus debitis harum doloremque porro blanditiis officiis qui, impedit cum ullam hic ipsum culpa eius soluta sequi aliquam magnam quia, in dicta!
+                </p>
             </div>
-            <!-- <div class="popup" id="popup">Hello World</div> -->
-        </div>
+        </section>
+        <section class="contactContainer">
+            <div class="leftContactContainer">
+                <form action="https://formspree.io/f/mwkwddel" method="POST" method="post">
+                    <p class="leftContactContainerHeader">Napisz, jeśli masz jakies pytania</p>
+                    <div class="nameEmail">
+                        <label for="name" >
+                            <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
+                            <div class="statusName hidden">wpisz poprawne imię</div>
+                        </label>
+                        <label for="email">
+                            <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
+                            <div class="statusEmail hidden">wpisz poprawny email</div>
+                        </label>
+                    </div>
+                    <div class="messageSubmitBtn">
+                        <label for="message">
+                            <textarea class="messageSubmit" placeholder="Message..." name="message" required></textarea>
+                        </label>
+                        <button class="submitBtn" type="submit" value="Submit">Wyślij</button>
+                    </div>
+                </form>
+            </div>
+            <div class="rightContactContainer"></div>
+        </section>
+        <section class="offerContainer">
+            <div class="offerPhoto"></div>
+            <div class="offerTextContainer">
+                <h1 class="offerHeader">Moja Oferta</h1>
+                <span class="offerText">Zapraszam do zapoznania się z moją ofertą. Kliknij tutaj aby zobaczyć asortyment i ceny</span>
+            </div>
+        </section>
+        <section>
+            <div class="map" id="mapOSM">
+                <div id="popup" class="ol-popup popup">
+                    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                    <div id="popup-content"></div>
+                </div>
+                <!-- <div class="popup" id="popup">Hello World</div> -->
+            </div>
+        </section>
+    </main>
+        <footer>
+            <div class="footerInfos">
+                <div class="footerPhone">Zadzwoń: 123 456 789</div>
+                <div class="footerAdress">Iłowo-Osada 13-240, ul. Śmaka i Owaka 3/4</div>
+            </div>
+            <div class="footerCopy">&copy; Ogrodnictwo Tom C.</div>
+        </footer>
 
-    </section>
-</main>
-    <footer>
-        <div class="footerInfos">
-            <div class="footerPhone">Zadzwoń: 123 456 789</div>
-            <div class="footerAdress">Iłowo-Osada 13-240, ul. Śmaka i Owaka 3/4</div>
-        </div>
-        <div class="footerCopy">&copy; Ogrodnictwo Tom C.</div>
-    </footer>
+        <script src="main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="contactForm.js"></script>
 
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-    <script src="contactForm.js"></script>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
-    </script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
-    </script> -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+            integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
+        </script> -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+            integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
+        </script> -->
 </body>
 
 
