--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
 
 <body>
     <nav class="nav">
-        <a class="nav__link" href="#">o mnie</a>
-        <a class="nav__link" href="#">moi klienci</a>
-        <a class="nav__link" href="/oferta.html">oferta</a>
-        <a class="nav__link" href="#">opinie</a>
-        <a class="nav__link" href="#">jak dojechać</a>
-        <a class="nav__link nav__link--contact" href="#">kontakt</a>
+            <div class="hamburger_menu">
+                <div class="line line_1"></div>
+                <div class="line line_2"></div>
+                <div class="line line_3"></div>
+            </div>
+        <div class="nav_list">
+            <a class="nav__link" href="#">o mnie</a>
+            <a class="nav__link" href="#">moi klienci</a>
+            <a class="nav__link" href="/oferta.html">oferta</a>
+            <a class="nav__link" href="#">opinie</a>
+            <a class="nav__link" href="#">jak dojechać</a>
+            <a class="nav__link nav__link--contact" href="#">kontakt</a>
+        </div>
     </nav>
 
     <header>
@@ -83,8 +90,10 @@
         <section class="offerContainer">
             <div class="offerPhoto"></div>
             <div class="offerTextContainer">
-                <h1 class="offerHeader">Moja Oferta</h1>
-                <span class="offerText">Zapraszam do zapoznania się z moją ofertą. Kliknij tutaj aby zobaczyć asortyment i ceny</span>
+                <h1 class="offerHeader">Asortyment</h1>
+                <span class="offerText">Zapraszam do zapoznania się z moją ofertą.
+                    Kliknij w przycisk poniżej aby zobaczyć asortyment </span>
+                <button onclick="location.href='/oferta.html'" type=button class="offerBtn">Moja Oferta</button>
             </div>
         </section>
         <section>
@@ -108,6 +117,7 @@
         <script src="main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src="contactForm.js"></script>
+        <script src="hamburger.js"></script>
 
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
             integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
