--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="root.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/slider.css">
 </head>
 
 <body>
@@ -96,6 +97,29 @@
                 <button onclick="location.href='/oferta.html'" type=button class="offerBtn">Moja Oferta</button>
             </div>
         </section>
+        <section class="opinionContainer">
+            <div class="slidesContainer">
+                <div class="slides">
+                    <q>Super kwiatki</q>
+                    <p class="opinionAuthor">- John Keats</p>
+                </div>
+                <div class="slides">
+                    <q>Bardzo smaczne i w ogóle. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nesciunt nisi, nihil exercitationem amet error? Error placeat consequatur ex molestiae vel. Nesciunt quis dolore distinctio, repellat pariatur molestias repellendus totam!</q>
+                    <p class="opinionAuthor">- Ernest Hemingway</p>
+                </div>
+                <div class="slides">
+                    <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+                    <p class="opinionAuthor">- Thomas A. Edison</p>
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <div class="dotContainer">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </section>
         <section>
             <div class="map" id="mapOSM">
                 <div id="popup" class="ol-popup popup">
@@ -118,6 +142,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src="contactForm.js"></script>
         <script src="hamburger.js"></script>
+        <script src="/slider.js"></script>
 
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
             integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
