--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
         <section class="opinionContainer">
             <div class="slidesContainer">
                 <div class="slides">
-                    <q>Super kwiatki</q>
+                    <h1>Super kwiatki</h1>
                     <p class="opinionAuthor">- John Keats</p>
                 </div>
                 <div class="slides">
-                    <q>Bardzo smaczne i w ogóle. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nesciunt nisi, nihil exercitationem amet error? Error placeat consequatur ex molestiae vel. Nesciunt quis dolore distinctio, repellat pariatur molestias repellendus totam!</q>
+                    <h1>Bardzo smaczne i w ogóle. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nesciunt nisi, nihil exercitationem amet error? Error placeat consequatur ex molestiae vel. Nesciunt quis dolore distinctio, repellat pariatur molestias repellendus totam!</h1>
                     <p class="opinionAuthor">- Ernest Hemingway</p>
                 </div>
                 <div class="slides">
-                    <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+                    <h1>I have not failed. I've just found 10,000 ways that won't work.</h1>
                     <p class="opinionAuthor">- Thomas A. Edison</p>
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <a class="prev" onclick="plusSlide(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlide(1)">&#10095;</a>
             </div>
             <div class="dotContainer">
                 <span class="dot" onclick="currentSlide(1)"></span>
